Compare KMP vs Simple

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,8 @@ add_executable(testPrefix test/testPrefix.cpp test/TestKMP.cpp test/TestKMP.h sr
 add_executable(testPatternSearch test/testPatternSearch.cpp test/TestKMP.cpp test/TestKMP.h src/KMP.cpp src/KMP.h)
 add_executable(testCheckShift test/testCheckShift.cpp test/TestKMP.cpp test/TestKMP.h src/KMP.cpp src/KMP.h)
 
+add_executable(compareSimpleVsKmp src/compareSimpleVsKmp.cpp)
+
 target_link_libraries(testPrefix ${GTEST_LIBRARIES} pthread)
 target_link_libraries(testPatternSearch ${GTEST_LIBRARIES} pthread)
 target_link_libraries(testCheckShift ${GTEST_LIBRARIES} pthread)
